--- a/index.html
+++ b/index.html
@@ -11,24 +11,31 @@
 <h1>Book info</h1>
 
 <div id="new-book-entry">
-    <form >
+    <dialog>
+   <form>
         <ul>
     <li><label for="title">Title</label><input type="text" id="title" name="title"></li>
-    <li><label for="title">Author</label><input type="text" id="author" name="author"></li>
-    <li><label for="title">Pages</label><input type="number" id="pages" name="pages"></li>
-    <li><label for="title">Read?</label><input type="radio" id="read" name="read"></li>
+    <li><label for="author">Author</label><input type="text" id="author" name="author"></li>
+    <li><label for="pages">Pages</label><input type="number" id="pages" name="pages"></li>
+    <li><label for="read">Read it?</label>
+        <select id="read">
+        <option value="yes">Yes</option>
+        <option value="no">No</option>
+    </select>
+               
+        
+    </li>
+   
 </ul>
 <button type="submit">Submit</button>
+<button id="cancel">Cancel</button>
+
 </form>
-
+</dialog>
+<div><button id="add-new">Add a new book</button></div>
 </div>
 
-<div id="card">
-    <div class="title"></div>
-    <div class="author"></div>
-    <div class="pages"></div>
-    <div class="read"></div>
-</div>
+
 
 
 
