--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Library</title>
+    <title>LibraryCatalog</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-<h1>Library</h1>
+<h1>Library Catalog</h1>
 
 
 
